tests/machine/x/go/values_builtin.error
run error: exit status 1
# command-line-arguments
tests/machine/x/go/values_builtin.go:11:7: undefined: M
